# Q-BitX-Android-Wallet

./: .gitignore  README.md  gradlew.bat  settings.gradle.kts
.github/workflows/: build-android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dilithium_jni.c
app/src/main/cpp/dilithium/: config.h  sign.h
app/src/main/java/org/qbitx/wallet/: MainActivity.kt
app/src/main/java/org/qbitx/wallet/crypto/: AddressUtils.kt  DilithiumNative.kt  TransactionBuilder.kt
app/src/main/java/org/qbitx/wallet/data/: KeyManager.kt
app/src/main/java/org/qbitx/wallet/network/: NodeRpcClient.kt
app/src/main/java/org/qbitx/wallet/ui/: Screens.kt  WalletViewModel.kt
app/src/main/java/org/qbitx/wallet/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: network_security_config.xml
